Update and rename 2016-11-07-data-smart.md to 2016-11-07-data-smart-1.md

--- a/_posts/2016-11-07-data-smart-1.md
+++ b/_posts/2016-11-07-data-smart-1.md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: "data smart (chapter 1)"
+title: "data smart"
 tags:
     - ipython
     - notebook
 ---
 
 
-#### Chapter 1
+# Chapter 1
 Following John W. Foreman's 2014 book "Data Smart: Using Data Science to Transform Information into Insight" using python.
 
-##### 1.0 Load data from http://media.wiley.com/product_ancillary/6X/11186614/DOWNLOAD/ch01.zip, Concessions.xlsx
+**1.0** Load data from http://media.wiley.com/product_ancillary/6X/11186614/DOWNLOAD/ch01.zip, Concessions.xlsx
 
 **In [1]:**
 
@@ -32,7 +32,7 @@ df_sales.head() # use .head() to just show top 4 results
 <div>
  <table rules="groups"> 		
    <thead>		
-     <tr style="text-align: right;">		
+     <tr>		
        <th></th>		
        <th>Item</th>	
        <th>Category</th>
@@ -136,7 +136,7 @@ df_sales['Price'].describe() # basic stats
 
 
 
-##### 1.2 Calculate Actual Profit
+**1.2** Calculate Actual Profit
 
 **In [5]:**
 
@@ -149,7 +149,7 @@ df_sales.head()
 <div>
 <table rules="groups">
   <thead>
-    <tr style="text-align: right;">
+    <tr>
       <th></th>
       <th>Item</th>
       <th>Category</th>
@@ -203,7 +203,7 @@ df_sales.head()
 </table>
 </div>
 
-##### 1.3 Load data from 'Calories' worksheet and plot
+**1.3** Load data from 'Calories' worksheet and plot
 
 **In [6]:**
 
@@ -217,7 +217,7 @@ df_cals.head()
 <div>
 <table rules="groups">
   <thead>
-    <tr style="text-align: right;">
+    <tr>
       <th></th>
       <th>Item</th>
       <th>Calories</th>
@@ -268,7 +268,7 @@ plt.show()
 ![png]({{ site.baseurl }}/notebooks/notebook_files/notebook_9_0.png)
 
 
-##### 1.4 add calorie data to sales worksheet
+**1.4** add calorie data to sales worksheet
 
 **In [8]:**
 
@@ -281,7 +281,7 @@ df_sales.head()
 <div>
 <table rules="groups">
   <thead>
-    <tr style="text-align: right;">
+    <tr>
       <th></th>
       <th>Item</th>
       <th>Category</th>
