--- a/_posts/2016-11-17-data-smarts-11.md
+++ b/_posts/2016-11-17-data-smarts-11.md
@@ -13,10 +13,51 @@ Continuing from chapter 4.
 ```python
 import networkx as nx
 import matplotlib.pyplot as plt
-G = G=nx.from_numpy_matrix(dist_out)
-nx.draw(G)
+G = nx.from_numpy_matrix(dist_out)
+G.graph['name']='cosine similarity graph'
+
+# create network layout for visualizations
+pos = nx.spring_layout(G)
+
+nx.draw(G, pos, node_size=50)
+print(nx.info(G))
 plt.show()
 ```
 
+    Name: cosine similarity graph
+    Type: Graph
+    Number of nodes: 100
+    Number of edges: 1575
+    Average degree:  31.5000
+    
 
-![png]({{ site.baseurl }}/notebooks/notebook_files/notebook4_7_0.png)
+
+![png]({{ site.baseurl }}/notebooks/notebook5_files/notebook5_7_1.png)
+
+<!--more-->
+
+**In [2]:**
+
+```python
+r_hood = dist_out < 0.5  # filter out low similarity edges
+dist_out[r_hood] = 0      # low values set to 0
+G = nx.from_numpy_matrix(dist_out)
+G.graph['name']='r-filtered similarity graph'
+
+# create network layout for visualizations
+pos = nx.spring_layout(G)
+
+nx.draw(G, pos, node_size=50)
+print(nx.info(G))
+plt.show() # show filtered graph
+```
+
+    Name: r-filtered similarity graph
+    Type: Graph
+    Number of nodes: 100
+    Number of edges: 378
+    Average degree:   7.5600
+    
+
+
+![png]({{ site.baseurl }}/notebooks/notebook5_files/notebook5_8_1.png)
