--- a/_posts/2016-11-18-data-smarts-12.md
+++ b/_posts/2016-11-18-data-smarts-12.md
@@ -28,8 +28,8 @@ plt.show()
     Name: community graph
     Type: Graph
     Number of nodes: 100
-    Number of edges: 378
-    Average degree:   7.5600
+    Number of edges: 442
+    Average degree:   8.8400
     
 
 
@@ -45,7 +45,7 @@ mod = community.modularity(part,G)
 print("modularity:", mod)
 ```
 
-    modularity: 0.7116192085619842
+    modularity: 0.6749434330467096
     
 
 **In [3]:**
@@ -54,7 +54,6 @@ print("modularity:", mod)
 community_num = [x+1 for x in community_num] # non-zero indexing for community list
 community_dict = dict(zip(names, community_num))
 df_sales['community']=df_sales.name.map(community_dict) # map communities to sales
-df_sales = df_sales.drop('id', 1) # don't need this now
 df_sales.head() # note: first five all in same community
 ```
 
@@ -113,10 +112,10 @@ df_sales.head() # note: first five all in same community
 ```python
 from collections import Counter
 
-count_dict = dict(zip(df_sales['community'], df_sales['offer']))
+count_dict = dict(zip(df_sales['community'], df_sales['offer'])) # create dictionary of all offers purchased by each community
 count_list = Counter(count_dict)
-df_communities = pd.DataFrame(sorted(count_list.most_common()))
-df_communities.columns = ['Community', 'Most Common Offer']
+df_communities = pd.DataFrame(sorted(count_list.most_common())) # find most common offer purchased by each community
+df_communities.columns = ['Community', 'Offer']
 df_communities
 ```
 
@@ -129,7 +128,7 @@ df_communities
     <tr>
       <th></th>
       <th>Community</th>
-      <th>Most Common Offer</th>
+      <th>Offer</th>
     </tr>
   </thead>
   <tbody>
@@ -151,17 +150,17 @@ df_communities
     <tr>
       <th>3</th>
       <td>4</td>
-      <td>18</td>
+      <td>30</td>
     </tr>
     <tr>
       <th>4</th>
       <td>5</td>
-      <td>30</td>
+      <td>5</td>
     </tr>
     <tr>
       <th>5</th>
       <td>6</td>
-      <td>5</td>
+      <td>23</td>
     </tr>
     <tr>
       <th>6</th>
@@ -176,7 +175,7 @@ df_communities
     <tr>
       <th>8</th>
       <td>9</td>
-      <td>30</td>
+      <td>22</td>
     </tr>
     <tr>
       <th>9</th>
@@ -186,31 +185,6 @@ df_communities
     <tr>
       <th>10</th>
       <td>11</td>
-      <td>31</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>12</td>
-      <td>31</td>
-    </tr>
-    <tr>
-      <th>12</th>
-      <td>13</td>
-      <td>32</td>
-    </tr>
-    <tr>
-      <th>13</th>
-      <td>14</td>
-      <td>32</td>
-    </tr>
-    <tr>
-      <th>14</th>
-      <td>15</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>16</td>
       <td>21</td>
     </tr>
   </tbody>
@@ -222,9 +196,91 @@ df_communities
 **In [5]:**
 
 ```python
-df_offers = pd.read_excel(open('C:/Users/craigrshenton/Desktop/Dropbox/excel_data_sci/ch02/WineKMC.xlsx','rb'), sheetname=0) 
-df_communities['Origin']=df_offers['Offer #'].map(df_offers.Origin) # map offer region to communities
-df_communities['Varietal']=df_offers['Offer #'].map(df_offers.Varietal) # map offer name to communities
+# load info about offers
+df_offers = pd.read_excel(open('.../WineKMC.xlsx','rb'), sheetname=0)
+df_offers.rename(columns={'Offer #':'Offer'}, inplace=True)
+df_offers.head()
+```
+
+
+
+
+<div>
+<table border="1" class="dataframe">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Offer</th>
+      <th>Campaign</th>
+      <th>Varietal</th>
+      <th>Minimum Qty (kg)</th>
+      <th>Discount (%)</th>
+      <th>Origin</th>
+      <th>Past Peak</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>1</td>
+      <td>January</td>
+      <td>Malbec</td>
+      <td>72</td>
+      <td>56</td>
+      <td>France</td>
+      <td>False</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>2</td>
+      <td>January</td>
+      <td>Pinot Noir</td>
+      <td>72</td>
+      <td>17</td>
+      <td>France</td>
+      <td>False</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>3</td>
+      <td>February</td>
+      <td>Espumante</td>
+      <td>144</td>
+      <td>32</td>
+      <td>Oregon</td>
+      <td>True</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>4</td>
+      <td>February</td>
+      <td>Champagne</td>
+      <td>72</td>
+      <td>48</td>
+      <td>France</td>
+      <td>True</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>5</td>
+      <td>February</td>
+      <td>Cabernet Sauvignon</td>
+      <td>144</td>
+      <td>44</td>
+      <td>New Zealand</td>
+      <td>True</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+**In [6]:**
+
+```python
+df_communities = df_communities.merge(df_offers, on='Offer', how='left') # merge info on offers with community index
+df_communities.rename(columns={'Offer':'Offer Most Purchased'}, inplace=True) # add more accurate label 
 df_communities
 ```
 
@@ -237,9 +293,13 @@ df_communities
     <tr>
       <th></th>
       <th>Community</th>
-      <th>Most Common Offer</th>
-      <th>Origin</th>
+      <th>Offer Most Purchased</th>
+      <th>Campaign</th>
       <th>Varietal</th>
+      <th>Minimum Qty (kg)</th>
+      <th>Discount (%)</th>
+      <th>Origin</th>
+      <th>Past Peak</th>
     </tr>
   </thead>
   <tbody>
@@ -247,113 +307,122 @@ df_communities
       <th>0</th>
       <td>1</td>
       <td>26</td>
-      <td>France</td>
+      <td>October</td>
       <td>Pinot Noir</td>
+      <td>144</td>
+      <td>83</td>
+      <td>Australia</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>1</th>
       <td>2</td>
       <td>31</td>
-      <td>Oregon</td>
-      <td>Espumante</td>
+      <td>December</td>
+      <td>Champagne</td>
+      <td>72</td>
+      <td>89</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>2</th>
       <td>3</td>
       <td>30</td>
+      <td>December</td>
+      <td>Malbec</td>
+      <td>6</td>
+      <td>54</td>
       <td>France</td>
-      <td>Champagne</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>3</th>
       <td>4</td>
-      <td>18</td>
-      <td>New Zealand</td>
-      <td>Cabernet Sauvignon</td>
+      <td>30</td>
+      <td>December</td>
+      <td>Malbec</td>
+      <td>6</td>
+      <td>54</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>4</th>
       <td>5</td>
-      <td>30</td>
-      <td>Chile</td>
-      <td>Prosecco</td>
+      <td>5</td>
+      <td>February</td>
+      <td>Cabernet Sauvignon</td>
+      <td>144</td>
+      <td>44</td>
+      <td>New Zealand</td>
+      <td>True</td>
     </tr>
     <tr>
       <th>5</th>
       <td>6</td>
-      <td>5</td>
-      <td>Australia</td>
-      <td>Prosecco</td>
+      <td>23</td>
+      <td>September</td>
+      <td>Chardonnay</td>
+      <td>144</td>
+      <td>39</td>
+      <td>South Africa</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>6</th>
       <td>7</td>
       <td>29</td>
-      <td>South Africa</td>
-      <td>Espumante</td>
+      <td>November</td>
+      <td>Pinot Grigio</td>
+      <td>6</td>
+      <td>87</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>7</th>
       <td>8</td>
       <td>31</td>
-      <td>Chile</td>
-      <td>Chardonnay</td>
+      <td>December</td>
+      <td>Champagne</td>
+      <td>72</td>
+      <td>89</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>8</th>
       <td>9</td>
-      <td>30</td>
-      <td>California</td>
-      <td>Prosecco</td>
+      <td>22</td>
+      <td>August</td>
+      <td>Champagne</td>
+      <td>72</td>
+      <td>63</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>9</th>
       <td>10</td>
       <td>31</td>
-      <td>France</td>
+      <td>December</td>
       <td>Champagne</td>
+      <td>72</td>
+      <td>89</td>
+      <td>France</td>
+      <td>False</td>
     </tr>
     <tr>
       <th>10</th>
       <td>11</td>
-      <td>31</td>
-      <td>Australia</td>
-      <td>Prosecco</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>12</td>
-      <td>31</td>
-      <td>Chile</td>
-      <td>Merlot</td>
-    </tr>
-    <tr>
-      <th>12</th>
-      <td>13</td>
-      <td>32</td>
-      <td>Chile</td>
-      <td>Merlot</td>
-    </tr>
-    <tr>
-      <th>13</th>
-      <td>14</td>
-      <td>32</td>
-      <td>Italy</td>
-      <td>Cabernet Sauvignon</td>
-    </tr>
-    <tr>
-      <th>14</th>
-      <td>15</td>
-      <td>4</td>
-      <td>California</td>
-      <td>Merlot</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>16</td>
       <td>21</td>
-      <td>Germany</td>
-      <td>Pinot Noir</td>
+      <td>August</td>
+      <td>Champagne</td>
+      <td>12</td>
+      <td>50</td>
+      <td>California</td>
+      <td>False</td>
     </tr>
   </tbody>
 </table>
