--- a/_posts/2016-11-16-data-smarts-10.md
+++ b/_posts/2016-11-16-data-smarts-10.md
@@ -6,7 +6,7 @@ tags:
     - notebook
 ---
 
-Contunuing with my python translation of John W. Foreman's 2014 book "Data Smart: Using Data Science to Transform Information into Insight".
+Continuing with my python translation of John W. Foreman's 2014 book "Data Smart: Using Data Science to Transform Information into Insight".
 
 Load data from http://media.wiley.com/product_ancillary/6X/11186614/DOWNLOAD/ch02.zip, WineKMC.xlsx
 
