--- a/_posts/2016-11-20-data-smarts-14.md
+++ b/_posts/2016-11-20-data-smarts-14.md
@@ -49,4 +49,4 @@ plt.show()
 ![png]({{ site.baseurl }}/notebooks/notebook6_files/notebook6_14_0.png)
 
 
-We can see that the purchase of Folic Acid is a much better predictor of a customer pregnancy, surprisingly more so than an interest in Prenatal Yoga (presumably more expectant mother use folic acid than take up yoga)---this information could be used to accurately target the advertisement of baby products
+We can see that the purchase of folic acid is a much better predictor of a customer pregnancy, more so than an interest in prenatal yoga (i.e., more expectant mothers use folic acid than take up yoga)---this information could be used to accurately target the advertisement of baby products
