--- a/_posts/2016-11-22-data-smarts-16.md
+++ b/_posts/2016-11-22-data-smarts-16.md
@@ -33,7 +33,8 @@ print(metrics.accuracy_score(y_test, y_pred_class))
 ```
 
     0.88
-    
+
+A ROC curve (Receiver Operating Characteristic) is a plot of the true positive rate *vs* the false positive rate as the threshold value for classifying an item increased from 0 to 1.
 
 **In [2]:**
 
@@ -57,6 +58,8 @@ plt.show()
 ![png]({{ site.baseurl }}/notebooks/notebook8_files/notebook8_14_0.png)
 
 
+AUC (Area Under the Curve) or more precisely AUROC (Area Under the Receiver Operating Characteristic curve), is a common evaluation metric for binary classification problems such as logistic regression. A random predictor with AUC = 0.5 is commonly used as a baseline to see whether the model is useful. AUC = 1 means the prediction model is perfect
+
 **In [3]:**
 
 ```python
@@ -79,6 +82,8 @@ plt.show()
 
 ![png]({{ site.baseurl }}/notebooks/notebook8_files/notebook8_16_0.png)
 
+
+The AUC of the logit model above is fairy good, but we may want to assess how the results will generalize to an independent data set using cross-validation
 
 **In [5]:**
 
