--- a/_posts/2016-11-22-data-smarts-16.md
+++ b/_posts/2016-11-22-data-smarts-16.md
@@ -83,7 +83,7 @@ plt.show()
 ![png]({{ site.baseurl }}/notebooks/notebook8_files/notebook8_16_0.png)
 
 
-The AUC of the logit model above is fairy good, but we may want to assess how the results will generalize to an independent data set using cross-validation
+The AUC of the logit model above is fairly good, but we may want to assess how the results will generalize to an independent data set using cross-validation
 
 **In [5]:**
 
