--- a/_posts/2016-11-22-data-smarts-16.md
+++ b/_posts/2016-11-22-data-smarts-16.md
@@ -47,15 +47,17 @@ import matplotlib.pyplot as plt
 # plot ROC curve
 fpr, tpr, thresholds = metrics.roc_curve(y_test, y_pred_prob)
 plt.plot(fpr, tpr)
-plt.xlim([0.0, 1.0])
-plt.ylim([0.0, 1.0])
+plt.plot([0, 1], [0, 1], color='navy', linestyle='--')
+plt.xlim([-0.05, 1.0])
+plt.ylim([0.0, 1.05])
+plt.gca().set_aspect('equal', adjustable='box')
 plt.xlabel('False Positive Rate (1 - Specificity)')
 plt.ylabel('True Positive Rate (Sensitivity)')
 plt.show()
 ```
 
 
-![png]({{ site.baseurl }}/notebooks/notebook8_files/notebook8_14_0.png)
+![png]({{ site.baseurl }}/notebooks/notebook6_files/notebook6_14_0.png)
 
 
 AUC (Area Under the Curve) or more precisely AUROC (Area Under the Receiver Operating Characteristic curve), is a common evaluation metric for binary classification problems such as logistic regression. A random predictor with AUC = 0.5 is commonly used as a baseline to see whether the model is useful. AUC = 1 means the prediction model is perfect
