--- a/_posts/2016-11-23-ms-azure-1.md
+++ b/_posts/2016-11-23-ms-azure-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "MS Azure with python- 1.0 feature reduction"
+title: "Data Science- 1.0 feature reduction"
 tags:
     - python
     - notebook
