--- a/_posts/2016-11-24-ms-azure-2.md
+++ b/_posts/2016-11-24-ms-azure-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "MS Azure- 1.1 principal component analysis"
+title: "Data Science- 1.1 principal component analysis"
 tags:
     - python
     - notebook
