--- a/_posts/2016-11-23-ms-azure-1.md
+++ b/_posts/2016-11-23-ms-azure-1.md
@@ -9,10 +9,11 @@ tags:
 Following 'Fundamentals of Data Science with Python' course @ Microsoft's new [Azure Notebooks](https://notebooks.azure.com/) site.
 
 Preprocessing i.e., make the learning easier or better  beforehand -  feature reduction/selection/creation
-* SelectKBest
-* PCA
 
-Selecting k top scoring features (also dimensionality reduction)
+- SelectKBest
+- PCA
+
+Selecting *k* top scoring features (also dimensionality reduction)
 
 **In [1]:**
 
