--- a/_posts/2016-11-24-ms-azure-2.md
+++ b/_posts/2016-11-24-ms-azure-2.md
@@ -9,9 +9,10 @@ tags:
 Following 'Fundamentals of Data Science with Python' course @ Microsoft's new [Azure Notebooks](https://notebooks.azure.com/) site
 
 Principal component analysis (aka PCA)
-* Reduces dimensions (number of features), based on what information explains the most variance (or signal)
-* Considered unsupervised learning
-* Useful for very large feature space
+
+- Reduces dimensions (number of features), based on what information explains the most variance (or signal)
+- Considered unsupervised learning
+- Useful for very large feature space
 
 **In [1]:**
 
