--- a/_posts/2016-11-25-python-pro-1.md
+++ b/_posts/2016-11-25-python-pro-1.md
@@ -29,9 +29,9 @@ Feature Information:
 ```python
 import pandas as pd
 from pandas import read_csv
-pd.set_option('precision', 3) # set display precision to 3 significant figures
+pd.set_option('precision', 3) # set display precision to 3 decimal places
 
-filename = 'C:/Users/craigrshenton/Desktop/Dropbox/python/python_pro/machine_learning_mastery_with_python/machine_learning_mastery_with_python_code/chapter_07/pima-indians-diabetes.data.csv'
+filename = '.../pima-indians-diabetes.data.csv'
 names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']
 df = read_csv(filename, names=names)
 df.head()
