--- a/_posts/2016-11-22-data-smarts-16.md
+++ b/_posts/2016-11-22-data-smarts-16.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title: "Data smarts in python- 5.2 logit (revisited)"
+title: "Data smarts in python- 5.0 (revisited)"
 tags:
     - python
     - notebook
 ---
 
-Continuing with my python translation of John W. Foreman's 2014 book "Data Smart: Using Data Science to Transform Information into Insight".
+Continuing with my python translation of John W. Foreman's 2014 book "Data Smart: Using Data Science to Transform Information into Insight". Hat tip to Jason Brownlee's "Machine Learning Mastery With Python" for the project template. 
 
 In this chapter we are asked to predict whether or not customers are pregnant just from their purchasing habits.
 
 ## 1. Prepare Problem
+
 #### a) Load libraries
 
 **In [1]:**
@@ -37,7 +38,7 @@ from sklearn.naive_bayes import GaussianNB
 from sklearn.svm import SVC
 ```
 
-#### b) Load dataset
+### b) Load dataset
 
 Download customer account data from [Wiley's website](http://media.wiley.com/product_ancillary/6X/11186614/DOWNLOAD/ch06.zip), RetailMart.xlsx
 
@@ -55,7 +56,8 @@ dataset.columns = [x.strip().replace(' ', '_') for x in dataset.columns] # pytho
 The 'Pregnant' column can only take on one of two (in this case) possabilities, where 1 = pregnant, and 0 = not pregnant
 
 ##  2. Summarize Data
-#### a) Descriptive statistics
+
+### a) Descriptive statistics
 
 **In [3]:**
 
@@ -211,7 +213,8 @@ np.where( r > 0.7 )
 We can see no features with significant correlation coefficents (i.e., $r$ values > 0.7)
 
 ## 3. Prepare Data
-#### a) Data Transforms
+
+### a) Data Transforms
 
 We need to 'dummify' (i.e., separate out) the catagorical variables: implied gender and residency
 
@@ -270,7 +273,8 @@ y = array[:,n_features-1] # target
 ```
 
 ## 4. Evaluate Algorithms
-#### a) Split-out validation dataset
+
+### a) Split-out validation dataset
 
 **In [13]:**
 
@@ -282,7 +286,7 @@ X_train, X_validation, Y_train, Y_validation = train_test_split(X, y,
 test_size=validation_size, random_state=seed)
 ```
 
-#### b) Spot Check Algorithms
+### b) Spot Check Algorithms
 
 **In [14]:**
 
@@ -316,7 +320,7 @@ for name, model in models:
     SVM: 0.831250 (0.048170)
     
 
-#### c) Select The Best Model
+### c) Select The Best Model
 
 **In [15]:**
 
